# LLM4Rec

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements-local.txt
colab/: LLM4Rec_Colab.ipynb
scripts/: run.sh
src/: finetuning.py  predict.py  requirements.txt  training.py
src/llm4rec/: __init__.py  data.py  hf.py  io.py  logging_wandb.py  metrics.py  model.py  progress.py  runtime.py  tokenizer.py
src/llm4rec/stages/: __init__.py  eval_stage.py  finetune_stage.py  training_stage.py
